plugins {
    id 'java'
}

apply from: "E:/Java/GradleScripts/build-base.gradle"
apply from: "../github-packages.gradle"

group = 'org.atcraftmc'
version = '1.0-SNAPSHOT'

applyGlobalScript("Publish/ProjectOutput.gradle")
applyGlobalScript("Dependencies.gradle")

dependencies {
    implementation 'me.gb2022.commons:commons-nbt:1.0'
    implementation 'me.gb2022.commons:commons-math:1.0'
    implementation 'me.gb2022.commons:commons-container:1.0'
    implementation 'me.gb2022.commons:commons-general:1.0'
    implementation 'com.formdev:flatlaf:3.5.4'
    implementation 'com.google.code.gson:gson:2.12.1'

    implementation project(":common")
}

sourceCompatibility = '17'
targetCompatibility = '17'

jar{
    manifest{
        attributes "Main-Class":"org.atcraftmc.updater.client.ClientBootstrap";
        attributes "Premain-Class":"org.atcraftmc.updater.client.ClientBootstrap"
    }
    archiveBaseName="mc-updater-client"
    duplicatesStrategy = DuplicatesStrategy.INCLUDE

    from {
        (configurations.runtimeClasspath).collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
}